Cleanup SshProxyTest